--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,14 @@ baseurl: ''
 server_PROD: https://search.opendoc.sg
 server_DEV: https://search-staging.opendoc.sg
 # google_analytics: --------> COPY GA ID HERE
-section_order:
+order:
   - Open Government Products - Best Practices
   - Node.js Developer Setup
   - Linting
   - Using GitHub
   - AWS Best Practices
   - Working with Nectar
+
 styling_options:
   primary_brand_color: '#276ef1'
   logo_path: /assets/logo.png
