--- a/netlify.toml
+++ b/netlify.toml
@@ -36,4 +36,4 @@
     Referrer-Policy = "no-referrer"
     # Blocks request if request type does not match
     X-Content-Type-Options = "nosniff"
-    Feature-Policy = "vibrate 'none'; geolocation 'none'; midi 'none'; notifications 'none'; push 'none'; sync-xhr 'none'; microphone 'none'; camera 'none'; magnetometer 'none'; gyroscope 'none'; speaker 'none'; vibrate 'none'; fullscreen 'none'; payment 'none'"
+    Feature-Policy = "geolocation 'none'; midi 'none'; notifications 'none'; sync-xhr 'none'; microphone 'none'; camera 'none'; magnetometer 'none'; gyroscope 'none'; speaker 'none'; vibrate 'none'; fullscreen 'none'; payment 'none'"
