--- a/netlify.toml
+++ b/netlify.toml
@@ -31,7 +31,7 @@
     X-Frame-Options = "deny" 
     # XSS filter, prevent rendering if detected
     X-XSS-Protection = "1; mode=block"
-    Content-Security-Policy = "default-src 'self'; img-src *; frame-src *; font-src *; media-src *; style-src *"
+    Content-Security-Policy = "default-src 'self'; img-src *; frame-src *; font-src *; media-src *; style-src *; connect-src 'self' https://*.opendoc.sg"
     # Dont send referrer headers
     Referrer-Policy = "no-referrer"
     # Blocks request if request type does not match
