--- a/amplify.yml
+++ b/amplify.yml
@@ -21,3 +21,17 @@ frontend:
     paths: 
       - node_modules
       - bundled
+
+  customHeaders:
+        - pattern: '**/*'
+          headers:
+                - key: 'Referrer-Policy'
+                        value: 'no-referrer'
+                - key: 'X-Frame-Options'
+                        value: 'X-Frame-Options: SAMEORIGIN'
+                - key: 'X-XSS-Protection'
+                        value: 'X-XSS-Protection: 1; mode=block'
+                - key: 'X-Content-Type-Options'
+                        value: 'X-Content-Type-Options: nosniff'
+                - key: 'Content-Security-Policy'
+                        value: "default-src 'self'; img-src *; frame-src *; font-src *; media-src *; style-src * 'unsafe-inline'; connect-src 'self' https://*.opendoc.sg; script-src 'self'  'sha256-cZeHu5WczV7gma7unmZ5l6WP54Plm4jzl1MUr4q2lrY='"
